--- a/sobre.html
+++ b/sobre.html
@@ -13,7 +13,12 @@
       'https://www.google-analytics.com/analytics.js',
       'ga'
     );
-    ga('send', 'pageview', window.location.pathname);
+    let trackerName = getTrackerNameFromHash(location);
+    let possibleTrackers = ['externo', 'contato', 'historia', 'valores'];
+    
+    createMultipleTrackers(possibleTrackers, ga);
+    sendPageView(trackerName, location, ga);
+
   
   </script>
   <link rel="stylesheet" href="css/normalize.css">
@@ -65,10 +70,10 @@
         </ul>
       </li>
       <li class="menu-lista-item">
-        <a href="http://www.dp6.com.br/contato/" target="_blank" class="menu-lista-link menu-lista-contato" onclick="sendEvent('menu', 'entre_em_contato', 'link_externo', null, null)">Entre em Contato</a>
+        <a href="http://www.dp6.com.br/contato/" target="_blank" class="menu-lista-link menu-lista-contato" onclick="sendEvent('externo', 'menu', 'entre_em_contato', 'link_externo', null, null)">Entre em Contato</a>
       </li>
       <li class="menu-lista-item">
-        <a href="http://autos.dp6.com.br/autos_revista_vfinal.pdf" class="menu-lista-link menu-lista-download" target="_pdf" onclick="sendEvent('menu', 'download_pdf', 'download_pdf', null, null)">Download PDF</a>
+        <a href="http://autos.dp6.com.br/autos_revista_vfinal.pdf" class="menu-lista-link menu-lista-download" target="_pdf" onclick="sendEvent('externo', 'menu', 'download_pdf', 'download_pdf', null, null)">Download PDF</a>
       </li>
     </ul>
     <div class="menu-rodape">
@@ -88,7 +93,7 @@
     <section>
       
 <h2 class="secao-titulo">Sobre</h2>
-<h3 id="contato" class="secao-subtitulo">Contato</h3><form class="contato" onsubmit="sendEvent('contato', 'enviado', 'enviado', null)">  <ul>    <li>      <label for="nome">Nome</label>      <input type="text" id="nome" placeholder="Nome Teste" onfocusout="sendFilledFieldEvent(this)">    </li>    <li>      <label for="email">E-Mail</label>    <input type="email" id="email" placeholder="email@dominio.com" onfocusout="sendFilledFieldEvent(this)">    </li>    <li>      <label for="telefone">Telefone</label>    <input type="tel" id="telefone" placeholder="(11) 4455-4455" onfocusout="sendFilledFieldEvent(this)">    </li>    <li>      <label for="aceito">Aceito que entrem em contato</label>      <input type="checkbox" id="aceito" onchange="sendFilledFieldEvent(this)">    </li>    <li>      <button type="submit">Enviar</button>    </li>  </ul></form><br><br>
+<h3 id="contato" class="secao-subtitulo">Contato</h3><form class="contato" onsubmit="sendEvent('contato', 'contato', 'enviado', 'enviado', null)">  <ul>    <li>      <label for="nome">Nome</label>      <input type="text" id="nome" placeholder="Nome Teste" onfocusout="sendFilledFieldEvent('contato', this)">    </li>    <li>      <label for="email">E-Mail</label>    <input type="email" id="email" placeholder="email@dominio.com" onfocusout="sendFilledFieldEvent('contato', this)">    </li>    <li>      <label for="telefone">Telefone</label>    <input type="tel" id="telefone" placeholder="(11) 4455-4455" onfocusout="sendFilledFieldEvent('contato', this)">    </li>    <li>      <label for="aceito">Aceito que entrem em contato</label>      <input type="checkbox" id="aceito" onchange="sendFilledFieldEvent('contato', this)">    </li>    <li>      <button type="submit">Enviar</button>    </li>  </ul></form><br><br>
 <h3 id="historia" class="secao-subtitulo">História</h3><p class="secao-paragrafo"><span class="highlight-3 odd">Viva Forevis aptent taciti sociosqu ad litora torquent. Vehicula non. Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. A ordem dos tratores não altera o pão duris.</span>Diuretics paradis num copo é motivis de denguis. <span class="highlight-1 odd">Praesent malesuada urna nisi, quis volutpat erat hendrerit non.</span> Nam vulputate dapibus. Mais vale um bebadis conhecidiss, que um alcoolatra anonimis. Quem manda na minha terra sou euzis!</p><p class="secao-paragrafo">Tá deprimidis, eu conheço uma cachacis que pode alegrar sua vidis. Casamentiss faiz malandris se pirulitá. Paisis, filhis, espiritis santis. Detraxit consequat et quo num tendi nada. Suco de cevadiss, é um leite divinis, qui tem lupuliz, matis, aguis e fermentis. Viva Forevis aptent taciti sociosqu ad litora torquent. Vehicula non. Ut sed ex eros. Vivamus sit amet nibh non tellus tristique interdum. A ordem dos tratores não altera o pão duris.</p>
 <h3 id="valores" class="secao-subtitulo">Valores</h3><p class="secao-paragrafo"><span class="highlight-3 even">Mauris aliquet nunc non turpis scelerisque, eget. Nec orci ornare consequat. Praesent lacinia ultrices consectetur. Sed non ipsum felis. Não sou faixa preta cumpadi, sou preto inteiris, inteiris.</span> <span class="highlight-1 even">Todo mundo vê os porris que eu tomo, mas ninguém vê os tombis que eu levo!</span> Si num tem leite então bota uma pinga aí cumpadi! Leite de capivaris, leite de mula manquis sem cabeça. Atirei o pau no gatis, per gatis num morreus. <span class="highlight-2 even">Suco de cevadiss deixa as pessoas mais interessantis. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Nec orci ornare consequat.</span> Praesent lacinia ultrices consectetur. Sed non ipsum felis. Não sou faixa preta cumpadi, sou preto inteiris, inteiris.</p>
 <h5 class="subtitulo2">Valorinhos</h5><p class="secao-paragrafo">Copo furadis é disculpa de bebadis, arcu quam euismod magna. <span class="highlight-2 odd">Interagi no mé, cursus quis, vehicula ac nisi.</span> Sapien in monti palavris qui num significa nadis i pareci latim. Em pé sem cair, deitado sem dormir, sentado sem cochilar e fazendo pose.</p><a class="next-page" href="index.html">Início</a>
